RESOLVED FIXED244630
[LFC][IFC] Fix fast/inline-block/float-leading-whitespace.html
https://bugs.webkit.org/show_bug.cgi?id=244630
Summary [LFC][IFC] Fix fast/inline-block/float-leading-whitespace.html
alan
Reported 2022-08-31 14:00:18 PDT
ssia
Attachments
Patch (2.04 KB, patch)
2022-08-31 15:19 PDT, alan
no flags
alan
Comment 1 2022-08-31 15:19:19 PDT
EWS
Comment 2 2022-09-01 14:18:35 PDT
Committed 254069@main (ea65de44f0cc): <https://commits.webkit.org/254069@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 462056 [details].
Radar WebKit Bug Importer
Comment 3 2022-09-01 14:19:15 PDT
Note You need to log in before you can comment on or make changes to this bug.