[LFC][IFC] Fix fast/inline-block/float-leading-whitespace.html https://bugs.webkit.org/show_bug.cgi?id=244630

Reviewed by Antti Koivisto.

Ignore trimmable trailing content when checking if the float fits the line. This is similar to what InlineContentBreaker does with regular inline content.
e.g.
  <div style="width: 100px;">   <div style="float:left; width: 99px"></div></div>
  float should fit the block container.

* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::handleFloatContent):
* Source/WebCore/layout/integration/LayoutIntegrationCoverage.cpp:

Canonical link: https://commits.webkit.org/254069@main